# ktu-timetable

./: Cargo.toml  README.md  build.rs
assets/: icon.ase  small-icon.ase
src/: app.rs  config.rs  environment.rs  events_table.rs  main.rs  timetable.rs  utils.rs
