[package]
name = "ktu-timetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui =  "0.20.1"
eframe =  "0.20.1"
ureq = { version = "2.6.1", features = ["native-tls", "cookies"]}
native-tls = "0.2.11"
ical = "0.7.*"
chrono = "0.4.23"
image = "0.24.5"
lazy-regex = "2.4.1"
directories-next = "2.0.0"
toml = "0.5.11"
serde = { version = "1.0.152", features = ["derive"]}
