[package]
name = "ktu-timetable"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
egui =  "0.20.1"
eframe =  "0.20.1"
ureq = { version = "2.6.1", features = ["native-tls", "cookies"]}
native-tls = "0.2.11"
ical = "0.7.*"
chrono = "0.4.23"
image = "0.24.5"
lazy-regex = "2.4.1"
directories-next = "2.0.0"
toml = "0.5.11"
serde = { version = "1.0.152", features = ["derive"]}
lazy_static = "1.4.0"